k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 40000
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 40001
